同步于: 1月24日15时51分

--- a/pages/p8/960128.md
+++ b/pages/p8/960128.md
@@ -1,4 +1,4 @@
-### 10个成功人士的必备特质(组图)
+### 改变气场 2021“牛 ”转好运不是梦(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,18 +6,14 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align:center">
-  <img alt="成功 特质  时间 同理心" src="https://img3.secretchina.com/pic/2020/9-17/p2778162a326849995-ss.jpg"/>
+ <p dir="ltr" style="text-align:center">
+  <img alt="气场 运气 因果 道德" src="https://img3.secretchina.com/pic/2021/1-24/p2864202a864828223-ss.jpg"/>
   <br>
-   具备这10个
+   改变
    <strong>
-    特质
+    气场
    </strong>
-   ，起步从
-   <strong>
-    成功
-   </strong>
-   开始。（图片来源：Adobe Stock）
+   ，“牛 ”转好运不是梦。（图片来源：Adobe Stock）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -29,179 +25,60 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  个人
-  <span href="https://www.secretchina.com/news/gb/tag/特质" target="_blank">
-   特质
-  </span>
-  和职场技能千百种，职训专家一下要你学习这个，一下要你培养那个。但什么才是真正值得花时间培养和投资的技能呢？
+  别人成功或顺遂的时候，有人会说“他不过
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/运气" target="_blank">
+    运气
+   </span>
+  </strong>
+  好而已”。而当自己失败或不顺利的时候，则会安慰自己：“我不过运气不好”。人们无法掌控它，就只好尽量去“了解”它，“取悦”它。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
- <p>
+ <p dir="ltr">
+  那么这个“运气”是啥？为什么好也是它坏也是它、成也是它败也是它？其实所谓的“运气”，也很简单。“运”是指
   <strong>
-   一、
-   <span href="https://www.secretchina.com/news/gb/tag/时间" target="_blank">
-    时间
-   </span>
-   管理
-  </strong>
- </p>
- <p>
-  高效的时间管理是雇主最重视的员工技能之一。每个人的时间管理方式都不一样，所以你必须找到最适合自己的一套规则。
- </p>
- <p>
-  许多人认为，时间管理最难的地方不在于执行，而在于订立胸怀大志的待办事项，然后按照时间，彻底执行。
- </p>
- <p>
-  <strong>
-   二、
-   <span href="https://www.secretchina.com/news/gb/tag/同理心" target="_blank">
-    同理心
+   <span href="https://www.secretchina.com/news/gb/tag/因果" target="_blank">
+    因果
    </span>
   </strong>
+  的持续，“气”是指磁能的交互。
  </p>
- <p>
-  美国一位企业老板沃旺德（Jane Wurdwand）解释，现代企业似乎经常忘了同理心的可贵。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  她认为，同理心就是体会他人感受，这是贩售产品和服务所需的最基本能力。而在团体中，同理心则可以让每个人更努力一些，让员工摒弃漠不关心和无所谓的心态。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
+ <p dir="ltr">
   <strong>
-   三、主宰你的睡眠
+   形成“好运气”
   </strong>
  </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  许多研究都显示，规律的睡眠可以避免失眠，也可以减少起床的痛苦，还可以提升整体睡眠品质。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
+ <p dir="ltr">
+  人的
   <strong>
-   四、正面自我谈话
+   气场
   </strong>
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  其实，别人怎么说你、认为你是怎么样的人，都不要紧。最重要的是，你怎么看待你自己，而建立起相信自己的勇气，需要时间。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  美国麻州本特利大学女性和商议中心所长迈尔丝（Betsy Myers）认为，如果沉浸在负面思考中，只会消磨自信心。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  <strong>
-   五、坚持
-  </strong>
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  不管是养成运动习惯、在职进修拿学位，或是着手重要的专案计划，坚持是
-  <span href="https://www.secretchina.com/news/gb/tag/成功" target="_blank">
-   成功
+  是看不见的，但这种力量是巨大的，就像
+  <span href="https://zh.wikipedia.org/wiki/%E4%B8%87%E6%9C%89%E5%BC%95%E5%8A%9B%E5%AE%9A%E5%BE%8B">
+   万有引力
   </span>
-  的重要关键。
+  一样，我们每个人身上的这种气场无时无刻不在影响你的人生。
+ </p>
+ <p dir="ltr">
+  你的意念、成就事实。
+ </p>
+ <p dir="ltr">
+  你的观念、你的信仰、你的环境、你的朋友、你的呼吸、你吃的食物、你的欲望、你的静息与睡眠等都会影响你的磁场，这些
+  <span href="https://www.secretchina.com/news/gb/tag/气场" target="_blank">
+   气场
+  </span>
+  就形成你的气质、你的运气、你的命运。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -215,42 +92,45 @@
    </center>
   </div>
  </center>
- <p>
-  尽管在职场中已达目标，或已跻身一个理想的职位，仍要坚持不懈，秉持一样的信念，才能在工作中保持水准，甚至精益求精。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p style="text-align:center">
-  <img alt="专注于自己的事，管他人闲事会浪费时间和资源。（图片来源：Adobe Stock）" src="https://img3.secretchina.com/pic/2020/9-17/p2778164a388995605-ss.jpg"/>
-  <br>
-   专注于自己的事，不浪费时间去管他人闲事。（图片来源：Adobe Stock）
-  </br>
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
+ <p dir="ltr">
+  如果 一个人的气质很好，外表精神、有修养、有
   <strong>
-   六、寻求帮助
+   <span href="https://www.secretchina.com/news/gb/tag/道德" target="_blank">
+    道德
+   </span>
+  </strong>
+  ，这个人的气场就好，就会吸引好的事，吸引好的运气。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p dir="ltr">
+  相反， 一个人如果气场不好，外表没精神、委靡不振、做事没效率，若气场不好就会走霉运，不好的事情总是发生在他身上，干什么都不顺。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p dir="ltr">
+  <strong>
+   改变“坏运气 ”
   </strong>
  </p>
  <center>
@@ -265,8 +145,8 @@
    </center>
   </div>
  </center>
- <p>
-  美国网友分享，他曾在面试时被告知，“如果你开不了口，要求他人协助，就无法胜任这份工作。”
+ <p dir="ltr">
+  那么如何改善我们的气场，大大的改善我们人生呢？和3个因素息息相关。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -280,39 +160,9 @@
    </center>
   </div>
  </center>
- <p>
-  别怀疑，知道自己何时需要寻求协助、知道如何开口请求支援，也是重要的“能力”。因为对很多人觉得，开口要求帮忙，会被看扁或被看作不适任。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  但哈佛商学院一份报告指出，当你寻求别人的意见，同时也肯定了他人的能力和专业，这会让你赢得人心。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
+ <p dir="ltr">
   <strong>
-   七、知道何时该闭嘴，然后确实做到
+   1、积极、正向的意念
   </strong>
  </p>
  <center>
@@ -327,8 +177,130 @@
    </center>
   </div>
  </center>
- <p>
-  你或许有千百个八卦、意见或看不顺眼的事想要分享，但有时候最好的作法是把这些想法留给自己，而不是聒噪的与人分享。
+ <p dir="ltr">
+  你想什么，你相信什么，你就有什么样的气场，这也就是吸引力法则。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p dir="ltr">
+  你的思想，吸引你想要的东西。你是积极向上的思想，你的气场就是积极向上的。你的思想是消极负面的，你的气场就是消极负面的，同时也吸引消极负面的人和事，所以要加深你的正能量场，就要有积极正面的思想。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p dir="ltr">
+  你的思想、语言和行为，将为你所意识到的事物打开通道，良善和凶恶 ，富有或贫穷，都恰如你所想的状况那样环绕着你。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p dir="ltr">
+  一个人在心里怎么想，他就会是什么样。你一直很害怕的事物，总是向你走来。譬如，如果你一直恐惧失败，失败就会向你走来！也就是说，你所强烈意识到的事物总是会来到你这里。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p dir="ltr">
+  思想是因，与你思想相一致的人生和境遇就是你的果，你的因会吸引来果，这就是种瓜得瓜，你种下什么因就会收获什么果。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p dir="ltr">
+  知道这个法则的原理后，你就会运用思想的巨大能量来追求你所想要的一切，你会变得有自信，你会知道世间的因果法则，也会懂得正确、积极正面的运用你的思想了。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p dir="ltr">
+  人体就是一个很敏感的信息场，无时无刻都在与外界的信息、能量进行交换。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p dir="ltr">
+  <strong>
+   2、爱是最强的气场
+  </strong>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p dir="ltr">
+  爱是世间最强大的气场，因为它和宇宙信息和谐一致，爱是你身上正向的气场。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -346,8 +318,8 @@
   <ins class="adsbygoogle" data-ad-client="ca-pub-1276641434651360" data-ad-format="fluid" data-ad-layout="in-article" data-ad-slot="3646767294" style="display:block; text-align:center;">
   </ins>
  </center>
- <p>
-  这不是要你忍气吞声，或当个没意见的骑墙派，而是强调什么话该说，什么话不该说。当一个人被某种强烈的情绪左右，就可能冲动说了很多不得体的话，事后后悔不已，但话已收不回来。
+ <p dir="ltr">
+  只有发出爱，你才会吸引爱。要爱周围所有的人，爱你的朋友、父母、爱人、亲人、同事、敌人、地球万物、一花一草...你发出的爱越多，你积聚在宇宙间爱的气场就会越大，同时你收获的爱也就是爱。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -361,8 +333,8 @@
    </center>
   </div>
  </center>
- <p>
-  当你很生气、很愤怒的时候，请学着先把嘴巴闭上，因为在这个当下，很少人能理智的说出有建设性的话。
+ <p dir="ltr">
+  你发出爱，宇宙就有你爱的气场、一个人积聚的爱的气场越多，他就会吸引更多的爱。当你有困难有危险的时候，宇宙会发出各种信息让你感知到，这就像灵感一样，灵感发生于有爱的地方。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -376,9 +348,9 @@
    </center>
   </div>
  </center>
- <p>
+ <p dir="ltr">
   <strong>
-   八、倾听
+   3、善可累积正能量
   </strong>
  </p>
  <center>
@@ -393,8 +365,8 @@
    </center>
   </div>
  </center>
- <p>
-  在闭上嘴后，我们该学着倾听。临床心理医生李普金（Nicole Lipkin）曾说，大部分的员工忙的不可开交，一大堆讯息要回，电话分机此起彼落的响。但脑部能够处理的资讯是有限的，学习增强自己的倾听能力，其中一个方法是当你聆听对方说话时，自己也重复一遍。
+ <p dir="ltr">
+  行善之人，他就积聚了宇宙间的爱的磁场，当他有危险时，他的潜意识会有感知，比较容易避免灾难，就算真有灾难，他也会化险为夷。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -408,10 +380,8 @@
    </center>
   </div>
  </center>
- <p>
-  <strong>
-   九、管好自己的事，别管他人闲事
-  </strong>
+ <p dir="ltr">
+  你的思想是有气场，有能量、有吸引力的。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -425,8 +395,8 @@
    </center>
   </div>
  </center>
- <p>
-  这一点听起来像老人在说教，但你真的该专注于自己的事，因为管他人闲事不但浪费时间，也浪费资源。
+ <p dir="ltr">
+  善行是宇宙间最强大的气场、你发出多大的思想，宇宙间给你的气场就会有多大。一个广做慈善发出爱越多的人，他得到爱的气场就会越大。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -440,10 +410,8 @@
    </center>
   </div>
  </center>
- <p>
-  <strong>
-   十、主宰自己的想法
-  </strong>
+ <p dir="ltr">
+  宇宙是圆的，宇宙是有因果法则的，有付出就有回报。爱别人别人才会爱你，帮助别人别人才会帮助你。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -457,8 +425,8 @@
    </center>
   </div>
  </center>
- <p>
-  不要心猿意马，朝着你想做的事、想达成的目标前进，做你自己思绪的主宰。
+ <p dir="ltr">
+  在日常生活中，你会发现大量的“低能量”人。偶尔也会幸运地遇到高能量的人。他们总是那么积极乐观，总是那么快乐，总是那么具有影响力。你感到羡慕，并被深深吸引，同时也希望成为那样的人。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -472,8 +440,8 @@
    </center>
   </div>
  </center>
- <p>
-  很多人容易受他人牵动，很容易因为过去的事，瞻前顾后、绑手绑脚。但别忘了，过去是过去，未来的剧本，是你自己写的。
+ <p dir="ltr">
+  让我们一起成为那样的人，并被吸引！
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -487,42 +455,8 @@
    </center>
   </div>
  </center>
- <p>
-  别人怎么说你、认为你是怎么样的人，都不要紧。最重要的是，你怎么看待你自己，而建立起相信自己的勇气！
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p style="margin-bottom:12px;">
-  <hr style="border-top: 1px dashed  ;" width="100%"/>
-  <br/>
-  【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  ：每位
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
-  <center>
-   <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
-   </span>
-  </center>
+ <p dir="ltr">
+  愿我们一起迈进2021辛丑年，并“牛 ”转成好运！
   <center>
    <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
     <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
@@ -535,6 +469,40 @@
     </center>
    </div>
   </center>
+  <p>
+   责任编辑:肖品
+  </p>
+  <p>
+   本文短网址:
+   <input name="lname" onclick="javascript:this.focus();this.select();" onmouseover="javascript:this.focus();this.select();" type="text" value="http://kzg.io/gb41lw"/>
+   转载请注明出处，
+   <span style="color:red">
+    严禁建立镜像网站
+   </span>
+   .
+  </p>
+  <p style="margin-bottom:12px;">
+   <hr style="border-top: 1px dashed  ;" width="100%"/>
+   <br/>
+   【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   ：每位
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
+   <center>
+    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
+     <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
+    </span>
+   </center>
+  </p>
   <center>
    <div>
     <div id="txt-mid2-t22-2017" style="display: block;margin-top:8px;max-height: 351px;  overflow: hidden;">
@@ -552,13 +520,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/946312.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/946312.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/946312.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/09/19/946312.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/960128.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/960128.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/960128.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2021/01/24/960128.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p8/946312.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p8/960128.md' width='0px' height='0px'/>
