--- a/indexes/prog1530.md
+++ b/indexes/prog1530.md
@@ -117096,4 +117096,7 @@
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01242201)
 
 ----
+#### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01242251)
+
+----
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md)
