--- a/indexes/prog1530.md
+++ b/indexes/prog1530.md
@@ -117141,4 +117141,7 @@
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01250551)
 
 ----
+#### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01250601)
+
+----
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md)
