--- a/indexes/prog1530.md
+++ b/indexes/prog1530.md
@@ -117180,4 +117180,7 @@
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01251202)
 
 ----
+#### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01251251)
+
+----
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md)
