--- a/pages/p5/960445.md
+++ b/pages/p5/960445.md
@@ -1,4 +1,4 @@
-### 川普即将制裁中芯国际 中国芯片生死之变(图)
+### 拜登上台华尔街越来越心慌 直呼“不正常”(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align: center;">
-  <img alt="川普 制裁 中芯国际 芯片" src="https://img3.secretchina.com/pic/2020/9-13/p2775151a464166957-ss.jpg" style="height:337px; width:600px"/>
+ <p style="text-align:center">
+  <img alt="华尔街 投资 股市 拜登" src="https://img3.secretchina.com/pic/2020/3-27/p2656212a132928583-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   川普政府即将制裁中国最大的芯片制造企业中芯国际。（图片来源：Adobe stock）
+   现在华尔街越来越警惕股市泡沫。（图片来源：Getty Images）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -29,193 +29,177 @@
   </div>
  </div>
  <p>
-  【看中国2020年11月30日讯】（看中国记者李正鑫综合报导）
+  【看中国2021年1月27日讯】（看中国记者李正鑫综合报导）此前
   <strong>
-   川普
+   <span href="https://www.secretchina.com/news/gb/tag/华尔街" target="_blank">
+    华尔街
+   </span>
+   投资
   </strong>
-  政府瞄准了中国科技行业，即将
+  者过度押注民主党总统候选人
   <strong>
-   制裁
+   拜登
   </strong>
-  中国最大的
+  在美国大选中获胜，从而给市场带来金融风险。现在华尔街越来越警惕
   <strong>
-   芯片
+   股市
   </strong>
-  制造企业
-  <strong>
-   中芯国际
-  </strong>
-  （SMIC）和大型国有石油公司中海油（CNOOC）等公司。被外界称为
-  <span href="https://www.secretchina.com/news/gb/tag/习近平" target="_blank">
-   习近平
-  </span>
-  “经济国师”之一的清华大学国家金融研究院院长朱民认为，科技之变就是生死之变。
+  泡沫，也引发各界关注。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  《路透社》11月29日援引相关文件和消息来源报道，
-  <span href="https://zh.wikipedia.org/wiki/%E5%94%90%E7%B4%8D%C2%B7%E5%B7%9D%E6%99%AE" target="_blank">
-   川普
+  美国新任总统拜登入主白宫后，
+  <span href="https://zh.wikipedia.org/zh-cn/%E6%8A%95%E8%B5%84" target="_blank">
+   投资
   </span>
-  政府将遏制这两家被认为由中国军方拥有或控制的公司在美国市场融资，美中紧张局势将再度升级。
+  者将因此面临美国在赋税、政府支出、贸易和金融监管等方面有着和川普政府时期截然不同的变化。根据皮尤（Pew）研究中心此前的调查，有79%的美国登记选民说经济是他们的重中之重。
+  <span href="https://zh.wikipedia.org/wiki/%E4%B9%94%C2%B7%E6%8B%9C%E7%99%BB" target="_blank">
+   拜登
+  </span>
+  和川普的经济政策有极大的不同，有些甚至是完全对立的，那么拜登政府政策必将影响美国经济的未来，也会对世界经济产生深远影响。
  </p>
  <p>
-  《路透社》在11月初报道，美国国防部计划将认定四家
+  过去的两个月期间，摩根大通创造的一篮子“拜登股”不断上涨。
+  <span href="https://zh.wikipedia.org/zh-cn/%E5%8D%8E%E5%B0%94%E8%A1%97" target="_blank">
+   华尔街
+  </span>
+  的投资者积极押注将因拜登获胜而受益的资产，包括替代能源股和大麻股。
+ </p>
+ <p>
+  财经分析人士认为，从中长期来看，川普的政策是对华尔街的银行家们有利的。尤其是过去四年来，美国
+  <span href="https://zh.wikipedia.org/zh-cn/%E8%82%A1%E5%B8%82" target="_blank">
+   股市
+  </span>
+  大涨，华尔街和硅谷都赚的盆满钵满。但是，对于川普这样一个几乎没有弱点，特立独行又不好预测、无法控制的总统，华尔街和硅谷都是不喜欢的。对他们来说，拜登这样一个老政客容易妥协。但是，资本是逐利的也是善变的，资本更是善于背叛的。当资本一旦发现之前的选择是错误的，就会迅速的分析判断，然后马上调整自己的方向。
+ </p>
+ <p>
+  现在，华尔街越来越警惕股市泡沫。一些亏损企业股价飙升、股市炙手可热以及非职业
+  <span href="https://www.secretchina.com/news/gb/tag/投资" target="_blank">
+   投资
+  </span>
+  者的跟风，都已引发担忧。
+ </p>
+ <p>
+  1月26日，据《路透》报道，德美利证券(TD Ameritrade)首席市场策略师JJ Kinahan说，
+  <strong>
+   “目前交易相比于正常的交易活动，需要承担非常大的额外风险。这不是正常的交易活动。”
+  </strong>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  路孚特(Refinitiv)数据分析显示，在成份股营业利润为负的小盘股罗素2000指数中，这种极度盲目乐观的情绪也很明显。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  以David Kostin为首的高盛分析师团队在报告中写道，“市场各个部分最近显示出投资者的行为符合泡沫情形下的情绪。”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  Miller Tabak的首席市场策略师Matt Maley表示，不是非得达到1999-2000年的泡沫水平才会出现大幅度的下跌，现在市场已经出现泡沫并将下跌。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  德意志银行最近的一项调查中显示，90%的受访者表示看到部分市场出现价格泡沫。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  不过，值得注意的是，华尔街和中共的密切关系，也会给投资者带来更大的风险。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  独立智库天钧政经研究员任重道分析指出，二十多年来，华尔街巨头通过向美国投资者兜售中企股票，让巨额资金涌向中共的口袋。同时，华尔街向
   <span href="https://www.secretchina.com" target="_blank">
    中国
   </span>
-  公司为中国军方拥有或控制的公司。在这之前，已经有31家中国公司被认为具有中国军方背景。
+  企业提供IPO（首次公开募股）、收购美国企业及房地产的咨询服务，赚取大量利润。
  </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
  <p>
-  <span href="https://www.secretchina.com/news/gb/tag/川普" target="_blank">
-   川普
+  并且，华尔街的投行们非常清楚，做中国的生意除了直接向相关官员行贿外，也有不少是通过这些官员的子女、亲戚暗箱操作。一些官员的子女有海外留学背景，以及中国内地丰富的人脉关系，成为国际投行聘用的首要人选。这些国际投行在中国赚得盆满钵满的背后，是有着一张庞大的人际关系网，他们重金聘请的中国的官二代，为其冲锋陷阵，权力为其成功开路。
+  <span href="https://www.secretchina.com/news/gb/tag/江泽民" target="_blank">
+   江泽民
   </span>
-  (特朗普)近期发布了一项行政命令，将阻止美国投资者从明年起购买黑名单上的公司股票。
- </p>
- <p>
-  《路透社》11月29日援引相关文件和三个消息来源透露的信息显示，这个名单出包括
-  <span href="https://zh.wikipedia.org/zh-cn/%E4%B8%AD%E8%8A%AF%E5%9B%BD%E9%99%85" target="_blank">
-   中芯国际
-  </span>
-  和中海油外，还将包括中国建筑技术有限公司和中国国际工程咨询公司。
- </p>
- <p>
-  对此
-  <span href="https://www.secretchina.com/news/gb/tag/中芯国际" target="_blank">
-   中芯国际
-  </span>
-  表示，将继续“与美国政府进行有建设性和公开的接触”，并强调其产品和服务仅用于民用和商业用途，“公司和中国军方没有关系，也不会为任何军事最终用户和最终用途制造产品”。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  中芯国际对美国的技术依赖严重，并且已经成为川普政府的一个目标。今年9月，美国商务部在断定向该公司提供设备将存在用于军事目的的“不可接受的风险”后，通知一些美国公司，在为中芯国际提供产品和服务前，它们需要获得许可证。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  美国国防部依据《国防授权法》需要制订一份由中国军方拥有和控制的“共产主义中国军事公司”名单，今年首次发布这样的名单，其中包括海康威视、中国电信和中国移动等中国大企业。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  同时，美国国会和行政当局也越来越多地试图遏制不遵守规则的中国公司进入美国市场。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  美国国防承包商SOS International LLC公布的一份报告指出，中芯国际的技术有助于中国军方，报告随后在参与此次评估的美国官员中广泛地传阅。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  报告指出，中芯国际已经与中国大陆一间大型国防集团合作，与军方有联系的多所大学的研究人员在进行设计时，会匹配中芯国际的技术，其中包括一家军事院校，美国商务部在2015年已将列入出口黑名单，因为该院校涉嫌设计用于模拟核试验的超级计算机的
-  <span href="https://zh.wikipedia.org/zh-cn/%E8%8A%AF%E7%89%87" target="_blank">
-   芯片
-  </span>
-  。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  这份报告提到：“一系列军校和国防综合企业的研究人员，使用中芯国际的工艺和
-  <span href="https://www.secretchina.com/news/gb/tag/芯片" target="_blank">
-   芯片
-  </span>
-  进行研究，这代表研究是根据中芯国际生产规格进行，从而不可能在其它代工厂生产他们的芯片。”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  该报告引用了所称军校研究人员发表的论文，使用了中芯国际的芯片技术的参考数据。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  SOS International的这份报告，已经分享给川普政府数个机构的官员，其中包括美国商务部工业安全局（Bureau of Industry and Security,简称BIS）。BIS负责监督对美国敏感技术出口的限制。
+  儿子江绵恒、孙子江志成，刘云山儿子刘乐飞等都在金融业与国际投行有关联。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -234,11 +218,11 @@
   </ins>
  </center>
  <p>
-  中芯国际是中国最大的芯片制造商，也是
-  <span href="https://www.secretchina.com/news/gb/tag/华为" target="_blank">
-   华为
+  上个月网络热传一段中国人民大学国际关系学院副院长、对外战略研究中心副主任兼秘书长翟东升演讲的视频，翟东升坦承，北京当局搞不定
+  <span href="https://www.secretchina.com/news/gb/tag/川普" target="_blank">
+   川普
   </span>
-  芯片的供应商之一，在《中国制造2025》计划里，是北京当局重点扶持芯片行业所谓的“国家队”代表之一。
+  (特朗普)。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -253,7 +237,7 @@
   </div>
  </center>
  <p>
-  被外界称为习近平“经济国师”之一的清华大学国家金融研究院院长朱民9月5日在由《财经》、《财经智库》、北京资产管理协会主办的“2020全球财富管理论坛”上演讲称，经济严重衰退，金融市场巨大波动，国际政治生态恶化，但是所有的东西拢在一起，受冲击最大的是科技。
+  翟东升说：“以前1992到2016年之间，中美之间各种问题都能搞得定，所有的危机，不管是银河号事件，还是炸大使馆，还是撞了飞机，所有的事情，全部都是‘床头吵架床尾合’，两个月之内搞定。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -268,7 +252,7 @@
   </div>
  </center>
  <p>
-  朱民直言：“所有的人、所有的企业、所有的国家别无选择，只有跟着科技和数字化，这是生死之变，或者你跟上这个潮流，或者你被淘汰。”
+  翟东升直言：“我们在美国的权势核心圈有我们的老朋友！”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -283,7 +267,11 @@
   </div>
  </center>
  <p>
-  朱民坦承：“还是要看到我们的不足。我们在基础、核心、‘卡脖子’技术上还是有很多不足的。举一些国内大家都知道的例子。光伏面板，中国在全世界有50%的市场份额，我们做了调查，15%的技术在国外......半导体技术90%在国外。所以，我们还是得看到我们基础的薄弱。”
+  他还表示，华尔街在70年代开始，对美国的内政和外交有非常强的影响力。但是2008年之后华尔街的地位下降了，更重要的是2016年之后，华尔街搞不定川普。中美
+  <span href="https://www.secretchina.com/news/gb/tag/贸易战" target="_blank">
+   贸易战
+  </span>
+  过程中，华尔街也试图帮忙，但是力有不逮。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -298,7 +286,7 @@
   </div>
  </center>
  <p>
-  8月24日，朱民出席了习近平以个人名义召开的经济学者座谈会，与会的9名经济学者首次被媒体曝光，外界称他们为习近平的“经济国师”。
+  当谈美国现在形势时，翟东升说，“现在我们看到拜登上台了……传统的精英，政治精英，建制派，他们跟华尔街的关系是非常密切的”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -312,27 +300,8 @@
    </center>
   </div>
  </center>
- <p style="margin-bottom:12px;">
-  <hr style="border-top: 1px dashed  ;" width="100%"/>
-  <br/>
-  【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  ：每位
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
-  <center>
-   <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
-   </span>
-  </center>
+ <p>
+  并且翟东升暗示，中共帮拜登的儿子亨特·拜登建立基金公司。
   <center>
    <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
     <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
@@ -345,6 +314,44 @@
     </center>
    </div>
   </center>
+  <p>
+   责任编辑:辛荷
+来源:
+   <span href="/news/gb/tag/看中国  ">
+    看中国
+   </span>
+  </p>
+  <p>
+   本文短网址:
+   <input name="lname" onclick="javascript:this.focus();this.select();" onmouseover="javascript:this.focus();this.select();" type="text" value="http://kzg.io/gb41r3"/>
+   转载请注明出处，
+   <span style="color:red">
+    严禁建立镜像网站
+   </span>
+   .
+  </p>
+  <p style="margin-bottom:12px;">
+   <hr style="border-top: 1px dashed  ;" width="100%"/>
+   <br/>
+   【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   ：每位
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
+   <center>
+    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
+     <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
+    </span>
+   </center>
+  </p>
   <center>
    <div>
     <div id="txt-mid2-t22-2017" style="display: block;margin-top:8px;max-height: 351px;  overflow: hidden;">
@@ -362,13 +369,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/954247.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/954247.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/954247.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/30/954247.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/960445.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/960445.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/960445.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2021/01/27/960445.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p5/954247.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p5/960445.md' width='0px' height='0px'/>
